@@ -1,3 +1,8 @@
+2013-03-13  Niels Möller  <nisse@lysator.liu.se>
+
+	* x86_64/sha256-compress.asm: New file, 16% speedup (benchmarked
+	on intel i5).
+
 2013-03-11  Niels Möller  <nisse@lysator.liu.se>
 
 	* armv7/sha256-compress.asm: New file, 25% speedup.
